created show page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Crazy Rumble Drum Circus</title>
-    <link rel="stylesheet" href="/assets/css/styles.css">
-  </head>
+ {% include head.html %}
   <body>
     <img class="logo" src="assets/images/crdc-logo.png" alt="">
     <div class="languages">
       <a href="/the-show"><button href="/the-show" class="button" type="button" name="button">Tell me more...</button></a>
       <button href="/the-show" class="button" type="button" name="button"><a href="/the-show">Mehr Anzeigen...</a></button>
     </div>
-
+    {% include footer.html %}
   </body>
 </html>
