there was a '/' missing at the beginning of the path for logo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <div class="navigation-wrap">
-  <img class="logo-small" src="assets/images/crdc-logo.png" alt="">
+  <img class="logo-small" src="/assets/images/crdc-logo.png" alt="">
   {% include navigation.html %}
   <a class="cta" href="/contact">CONTACT US</a>
 </div>
