added slogan in show navigation

--- a/_includes/navigation-show.html
+++ b/_includes/navigation-show.html
@@ -1,3 +1,4 @@
+<span class="slogan">3 PERFORMERS, 100 DRUMMERS, AND...</span>
 <div class="show-navigation">
   <a {% if page.url == "/the-show/gallery.html" %}class="active-button-show"{% endif %}href="/the-show/gallery">GALLERY</a>
   <a {% if page.url == "/the-show/video.html" %}class="active-button-show"{% endif %}href="/the-show/video">VIDEO</a>
