--- a/_layouts/video.html
+++ b/_layouts/video.html
@@ -3,3 +3,4 @@ layout: default
 ---
 
 <iframe width="960" height= "540" src="{{ page.video-link }}" frameborder="0" allow="accelerometer; autoplay;" allowfullscreen></iframe>
+{% include navigation-show.html%}
