--- a/_layouts/story.html
+++ b/_layouts/story.html
@@ -3,5 +3,7 @@ layout: default
 ---
 <div class="story">
   <h1>{{ page.story-title }}</h1>
+  <p>{{ content }}</p>
+  <img src="" alt="">
 </div>
 {% include navigation-show.html %}
