finished story html

--- a/_layouts/story.html
+++ b/_layouts/story.html
@@ -2,8 +2,13 @@
 layout: default
 ---
 <div class="story">
+<div class="text">
   <h1>{{ page.story-title }}</h1>
   <p>{{ content }}</p>
-  <img src="" alt="">
+</div>
+<div class="images">
+  <img class="story-image-1" src="/assets/images/story-image-1.png" alt="">
+  <img class="story-image-2" src="/assets/images/story-image-2.png" alt="">
+</div>
 </div>
 {% include navigation-show.html %}
