--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,8 +4,8 @@
   <body>
     <img class="logo" src="assets/images/crdc-logo.png" alt="">
     <div class="languages">
-      <a href="/the-show"><button href="/the-show" class="button" type="button" name="button">Tell me more...</button></a>
-      <button href="/the-show" class="button" type="button" name="button"><a href="/the-show">Mehr Anzeigen...</a></button>
+      <a class="cta" href="/the-show/the-show/">Tell me more...</a>
+      <a class="cta" href="/the-show">Mehr Anzeigen...</a>
     </div>
     {% include footer.html %}
   </body>
