--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
-<a class="impressum" href="/impressum-&-privacy-policy">Impressum & Privacy Policy</a>
+<a class="footer" href="/impressum-&-privacy-policy">Impressum & Privacy Policy</a>
