went on with contacts, added awesome font

--- a/_layouts/impressum.html
+++ b/_layouts/impressum.html
@@ -7,6 +7,11 @@ layout: default
     <p>{{ page.telephone }}</p>
     <p>{{ page.e-mail }}</p>
     <a href="https://www.facebook.com/CrazyRumbleDrumCircus/?ref=br_rs"></a>
+    <a href="https://www.facebook.com/CrazyRumbleDrumCircus/?ref=br_rs"><i class="fab fa-facebook-f"></i></a>
   </div>
 
+  <div class="privacy-policy">
+    <h1>Privacy Policy</h1>
+    <p>{{ content }}</p>
+  </div>
 </div>
