--- a/_layouts/impressum.html
+++ b/_layouts/impressum.html
@@ -12,6 +12,8 @@ layout: default
 
   <div class="privacy-policy">
     <h1>Privacy Policy</h1>
-    <p>{{ content }}</p>
+    <div>
+      {{ content }}
+    </div>
   </div>
 </div>
