corrected impressum, started contact us

--- a/_layouts/impressum.html
+++ b/_layouts/impressum.html
@@ -4,10 +4,10 @@ layout: default
 <div class="wrapper-impressum">
   <div class="impressum">
     <p class="name">{{ page.contact-name }}</p>
+    <p>{{ page.address }}</p>
     <p>{{ page.telephone }}</p>
+    <p>{{ page.fax }}</p>
     <p>{{ page.e-mail }}</p>
-    <a href="https://www.facebook.com/CrazyRumbleDrumCircus/?ref=br_rs"></a>
-    <a href="https://www.facebook.com/CrazyRumbleDrumCircus/?ref=br_rs"><i class="fab fa-facebook-f"></i></a>
   </div>
 
   <div class="privacy-policy">
