contact form with simple forms

--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -11,5 +11,13 @@ layout: default
     <a href="https://www.facebook.com/CrazyRumbleDrumCircus/?ref=br_rs"><i class="fab fa-facebook-f"></i></a>
   </div>
 
-  
+
+  <form action="https://getsimpleform.com/messages?form_api_token=aa0a1c58e87ea8816ba9ff7d7a71d0ef" method="post">
+    <!-- all your input fields here.... -->
+    <input type='text' name='name' placeholder="Name"/>
+    <input type="email:" name="email" placeholder="e-mail" value="">
+    <textarea name="message" rows="20" cols="80"></textarea>
+    <input type='submit' value='Send' />
+  </form>
+<!-- REMEMBER TO PUT THANKYOU MESSAGE WHEN YOU STYLE THIS -->
 </div>
