--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -1,3 +1,11 @@
+---
+layout: default
+---
+
+<div class="berta">
+  <img src="" alt="">
+</div>
+
 <p>{{ page.berta }}</p>
 <p>{{ page.philipp }}</p>
 <p>{{ page.florian }}</p>
