created friends page

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -16,7 +16,7 @@ layout: default
   <h2>Philipp Schäfer</h2>
   <h4>Italy</h4>
   <h3>Actress and Theatre-Maker</h3>
-  <p><p>{{ page.philipp }}</p></p>
+  <p>{{ page.philipp }}</p>
   <img class="action-figure" src="../assets/images/philipp-in-action.png" alt="">
 </div>
 
