Changes in friends

--- a/_layouts/friends.html
+++ b/_layouts/friends.html
@@ -1,3 +1,18 @@
 ---
 layout: default
 ---
+{% for inner_circle in page.inner_circle %}
+<div class="friend">
+  <img src="{{ inner_circle.logo }}" alt="">
+  <h1>{{ inner_circle.person-name }}</h1>
+  <p>{{ inner_circle.person-role}}</p>
+</div>
+{%endfor%}
+
+{% for network in page.network %}
+<div class="collaborator">
+  <img src="{{ network.logo }}" alt="">
+  <h1>{{ network.person-name }}</h1>
+  <p>{{ network.person-role}}</p>
+</div>
+{%endfor%}
