--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
  {% include head.html %}
-  <body>
-    <img class="logo" src="assets/images/crdc-logo.png" alt="">
-    <div class="languages">
-      <a class="cta" href="/the-show/the-show/">Tell me more...</a>
-      <a class="cta" href="/the-show">Mehr Anzeigen...</a>
-    </div>
+
+  <body class="home">
+
+        <div class="header-home">
+
+          <a href="/"><img class="logo" src="assets/images/crdc-logo.png" alt=""></a>
+          <div class="languages">
+            <div class="cta"><a class="" href="/the-show">Tell me more...</a></div>
+            <div class="cta"><a class="" href="/the-show">Mehr Anzeigen...</a></div>
+          </div>
+
+        </div>
+
     {% include footer.html %}
+
   </body>
 </html>
