added slick library and gallery pictures

--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -1,5 +1,14 @@
 ---
 layout: default
 ---
+<div class="gallery">
+  <div><img src="uploads/crazy-rumble-drum-circus-gallery-1.jpg"</div>
+  <div>your content</div>
+  <div>your content</div>
+</div>
 
+<!-- Script for gallery carousel -->
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="slick/slick.min.js"></script>
 {% include navigation-show.html %}
