sylysed active link in menu

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <div class="navigation-wrap">
     <a href="/"><img class="logo" src="/assets/images/crdc-logo.png" alt=""></a>
   {% include navigation.html %}
-  <a class="cta" href="/contact">CONTACT US</a>
+  <a class="cta contact" href="/contact">CONTACT US</a>
 </div>
