--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="slider slider-for">
+<div class="big-pic slider slider-for">
   <div class="slider-for" ><img src="/uploads/crazy-rumble-drum-circus-gallery-12.jpg"></div>
   <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-2.jpg"></div>
   <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-3.jpg"></div>
@@ -17,7 +17,7 @@ layout: default
   <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-12.jpg"></div>
 </div>
 
-<div class="slider slider-nav">
+<div class="pic-list slider slider-nav">
   <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-1.jpg"></div>
   <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-2.jpg"></div>
   <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-3.jpg"></div>
