--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   {% include head.html %}
-  <body>
+  <body class="default-background">
     {% include header.html %}
     {{ content }}
     {% include footer.html %}
