corrected font size in menu

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -25,10 +25,10 @@
 .menu-item {
   text-align: center;
   margin: 0 1.5em;
-  font-size: 23px;
+  font-size: 18px;
 }
 .menu-item.active {
-font-size: 30px;
-color: #FAF076;
+font-size: 23px;
 font-weight: 900;
+text-decoration: underline;
 }
