--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -1,37 +1,37 @@
 ---
 layout: default
 ---
+<div class="gallery">
+  <div class="big-pic slider slider-for">
+    <div class="slider-for" ><img src="/uploads/crazy-rumble-drum-circus-gallery-12.jpg"></div>
+    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-2.jpg"></div>
+    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-3.jpg"></div>
+    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-4.jpg"></div>
+    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-5.jpg"></div>
+    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-6.jpg"></div>
+    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-7.jpg"></div>
+    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-8.jpg"></div>
+    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-9.jpg"></div>
+    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-10.jpg"></div>
+    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-11.jpg"></div>
+    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-12.jpg"></div>
+  </div>
 
-<div class="big-pic slider slider-for">
-  <div class="slider-for" ><img src="/uploads/crazy-rumble-drum-circus-gallery-12.jpg"></div>
-  <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-2.jpg"></div>
-  <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-3.jpg"></div>
-  <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-4.jpg"></div>
-  <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-5.jpg"></div>
-  <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-6.jpg"></div>
-  <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-7.jpg"></div>
-  <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-8.jpg"></div>
-  <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-9.jpg"></div>
-  <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-10.jpg"></div>
-  <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-11.jpg"></div>
-  <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-12.jpg"></div>
+  <div class="pic-list slider slider-nav">
+    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-1.jpg"></div>
+    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-2.jpg"></div>
+    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-3.jpg"></div>
+    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-4.jpg"></div>
+    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-5.jpg"></div>
+    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-6.jpg"></div>
+    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-7.jpg"></div>
+    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-8.jpg"></div>
+    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-9.jpg"></div>
+    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-10.jpg"></div>
+    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-11.jpg"></div>
+    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-12.jpg"></div>
+  </div>
 </div>
-
-<div class="pic-list slider slider-nav">
-  <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-1.jpg"></div>
-  <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-2.jpg"></div>
-  <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-3.jpg"></div>
-  <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-4.jpg"></div>
-  <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-5.jpg"></div>
-  <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-6.jpg"></div>
-  <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-7.jpg"></div>
-  <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-8.jpg"></div>
-  <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-9.jpg"></div>
-  <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-10.jpg"></div>
-  <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-11.jpg"></div>
-  <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-12.jpg"></div>
-</div>
-
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" src="/slick/slick.min.js"></script>
@@ -53,7 +53,8 @@ layout: default
      asNavFor: '.slider-for',
      dots: true,
      centerMode: true,
-     focusOnSelect: true
+     focusOnSelect: true,
+     variableWidth: true
     });
   });
 </script>
