--- a/_sass/gallery.scss
+++ b/_sass/gallery.scss
@@ -1,12 +1,26 @@
-.slider-for {
-  max-width: 200px;
-  object-fit: contain;
-}
-.slider-nav {
-  max-height: 100px;
-  object-fit: contain;
-}
-
-.gallery-pic {
-  max-height: 100px;
-}
+// .gallery {
+//   margin-top: 5rem;
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+// }
+//
+// .slider-for {
+//   max-width: 40rem;
+//   max-height: 30rem;
+//   object-fit: contain;
+// }
+// .slider-nav {
+//   max-height: 100px;
+//   object-fit: contain;
+// }
+//
+// .gallery-pic {
+//   max-width: 40rem;
+//   max-height: 100px;
+//   margin: 0px;
+// }
+//
+// .pic-list {
+//   height: 150px;
+// }
