--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@
 
         <div class="header-home">
 
-          <a href="/"><img class="logo" src="assets/images/crdc-logo.png" alt=""></a>
+          <a href="/"><img class="logo-home" src="assets/images/crdc-logo.png" alt=""></a>
           <div class="languages">
             <div class="cta"><a class="" href="/the-show">Tell me more...</a></div>
             <div class="cta"><a class="" href="/the-show">Mehr Anzeigen...</a></div>
