--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -13,8 +13,8 @@ $general: 'Montserrat', sans-serif;
 body {
   background-size: cover;
   background-repeat: no-repeat;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   overflow: hidden;
   margin: 0;
   object-fit: scale-down;
@@ -30,10 +30,12 @@ strong {
 
 body.default-background {
   background:    linear-gradient(
-      rgba(255, 0, 0, 0.45),
-      rgba(255, 0, 0, 0.45)
+      rgba(73, 146, 124, 0.7),
+      rgba(73, 146, 124, 0.5)
       ),
       url(/assets/images/Backround-default.jpg);
+  background-size: cover;
+
 }
 .cta > a {
   color: $yellow;
