--- a/_layouts/facts.html
+++ b/_layouts/facts.html
@@ -2,14 +2,15 @@
 layout: default
 ---
 <div class="facts">
-
   <div class="left-column-facts">
-    {{ content | markdownify }}
-    <img class="circus" src="/assets/images/image-drum-circle-set.png" alt="">
+      <div class="facts-text">
+        {{ content | markdownify }}
+      </div>
+        <img class="circus" src="/assets/images/image-drum-circle-set.png" alt="">
   </div>
 
   <div class="crdc-map">
-    <img src="/assets/images/CRDC_MAP.png" alt="">
+    <img class="map" src="/assets/images/CRDC_MAP.png" alt="">
   </div>
 
 </div>
