started styling contacts

--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -4,10 +4,9 @@ layout: default
 <div class="contact-wrapper">
 
   <div class="impressum">
-    <p class="name">{{ page.contact-name }}</p>
+    <p class="name"><strong>{{ page.contact-name }}</strong></p>
     <p>{{ page.telephone }}</p>
     <p>{{ page.e-mail }}</p>
-    <a href="https://www.facebook.com/CrazyRumbleDrumCircus/?ref=br_rs"></a>
     <a href="https://www.facebook.com/CrazyRumbleDrumCircus/?ref=br_rs"><i class="fab fa-facebook-f"></i></a>
   </div>
 
