--- a/_sass/contact.scss
+++ b/_sass/contact.scss
@@ -1,3 +1,9 @@
 .contact-wrapper {
   display: flex;
+  align-items: center;
+  justify-content: space-around;
+  height: 80%;
+}
+.impressum {
+  text-align: center;
 }
