styled cta.contact for mozilla

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -9,6 +9,8 @@
   position: absolute;
   right: 4rem;
   top: 4.5rem;
+  font-family: Montserrat, sans-serif;
+  font-weight: bold;
 }
 .navigation-wrap {
   display: flex;
