--- a/_sass/contact.scss
+++ b/_sass/contact.scss
@@ -1,5 +1,21 @@
+// .contact-wrapper {
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   height: 80%;
+// }
+// .contacts {
+//   text-align: center;
+// }
+// .contact-form {
+//   display: flex;
+//   flex-direction: column;
+//
+// }
+
 .contact-wrapper {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   align-items: center;
   justify-content: center;
   height: 80%;
@@ -8,7 +24,59 @@
   text-align: center;
 }
 .contact-form {
+  position: relative;
   display: flex;
   flex-direction: column;
-
+  color: $blue;
+}
+::placeholder {
+  color: $yellow;
+  font-weight: 600;
+}
+.contact-field {
+  color: $yellow;
+  padding: 1em
+}
+textarea {
+  -webkit-appearance: none;
+  max-height: 300px;
+  max-width: 600px;
+  resize: none;
+}
+.name-email {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+}
+.contact-field + .contact-field {
+  margin: 2em 0;
+}
+input[type='submit'] {
+  -webkit-appearance: none;
+  height: 2em;
+  line-height: 0;
+  padding: 1.5rem 0;
+  position: absolute;
+  bottom: -7rem;
+  width: 7rem;
+  cursor: pointer;
+}
+input, textarea {
+  background: rgba(0, 0, 0, 0);
+  border: solid $yellow;
+  border-radius: 3px;
+  outline: none;
+}
+input:focus, textarea:focus, select:focus {
+    outline-offset: 0px;
+}
+.fab.fa-facebook-f {
+  font-size: 40px;
+}
+.form-wrap{
+  position: relative;
+}
+.thanks {
+  position: absolute;
+  right: 15rem;
 }
