--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -19,7 +19,10 @@ body {
   margin: 0;
   object-fit: scale-down;
 }
-
+h1 {
+  font-weight: 900;
+  font-size: 24px;
+}
 a{
   color: $yellow;
   text-decoration: none;
