played around with header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div class="header-wrapper">
-  <div class="navigation-wrap">
-      <a href="/"><img class="logo" src="/assets/images/crdc-logo.png" alt=""></a>
-    {% include navigation.html %}
-    <a class="cta contact" href="/contact">CONTACT US</a>
-  </div>
+    <div class="navigation-wrap">
+        <a href="/"><img class="logo block" src="/assets/images/crdc-logo.png" alt=""></a>
+      {% include navigation.html %}
+      <a class="cta contact" href="/contact">CONTACT US</a>
+    </div>
 </div>
