--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -1,8 +1,8 @@
 .header-wrapper {
   display: block;
   margin-bottom: 2em;
+  position: relative;
 }
-
 .logo {
   width: 15rem;
   position: absolute;
