--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -4,7 +4,7 @@ layout: default
 <div class="contact-wrapper">
 
   <div class="contacts">
-    <p class="name"><strong>{{ page.contact-name }}</strong></p>
+    <h2>{{ page.contact-name }}</h2>
     <p>{{ page.telephone }}</p>
     <p>{{ page.e-mail }}</p>
     <a href="https://www.facebook.com/CrazyRumbleDrumCircus/?ref=br_rs"><i class="fab fa-facebook-f"></i></a>
