--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -23,6 +23,10 @@ h1 {
   font-weight: 900;
   font-size: 24px;
 }
+h2{
+  font-size: 20px;
+  font-weight: 900;
+}
 a{
   color: $yellow;
   text-decoration: none;
