--- a/_layouts/the-show.html
+++ b/_layouts/the-show.html
@@ -9,16 +9,16 @@ layout: default
   <div class="offer-wrapper">
     <div class="expectations">
       <h1> {{ page.expectation-title }} </h1>
-        <p>{{ page.expectation-1 }}</p>
-        <p>{{ page.expectation-2 }}</p>
-        <p>{{ page.expectation-3 }}</p>
+        <p>{{ page.expectation_1_en | markdownify }}</p>
+        <p>{{ page.expectation_2_en | markdownify }}</p>
+        <p>{{ page.expectation_3_en | markdownify }}</p>
     </div>
 
     <div class="offer">
-      <h1>{{ page.offer-title }}</h1>
-        <p>{{ page.offer-1 }}</p>
-        <p>{{ page.offer-2 }}</p>
-        <p>{{ page.offer-3 }}</p>
+      <h1>{{ page.offer-title | markdownify }}</h1>
+        <p>{{ page.offer_1_en | markdownify }}</p>
+        <p>{{ page.offer_2_en | markdownify }}</p>
+        <p>{{ page.offer_3_en | markdownify }}</p>
       </div>
   </div>
 </div>
