--- a/_layouts/the-show.html
+++ b/_layouts/the-show.html
@@ -8,14 +8,14 @@ layout: default
 
   <div class="offer-wrapper">
     <div class="expectations">
-      <h1> {{ page.expectation-title }} </h1>
+      <h1> {{ page.expectation_title_en }} </h1>
         <p>{{ page.expectation_1_en | markdownify }}</p>
         <p>{{ page.expectation_2_en | markdownify }}</p>
         <p>{{ page.expectation_3_en | markdownify }}</p>
     </div>
 
     <div class="offer">
-      <h1>{{ page.offer-title | markdownify }}</h1>
+      <h1>{{ page.offer_title_en | markdownify }}</h1>
         <p>{{ page.offer_1_en | markdownify }}</p>
         <p>{{ page.offer_2_en | markdownify }}</p>
         <p>{{ page.offer_3_en | markdownify }}</p>
