--- a/_sass/show.scss
+++ b/_sass/show.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   object-fit: contain;
   align-items: center;
+  justify-content: center;
 }
 
 .offer-wrapper {
@@ -11,8 +12,26 @@
 }
 .expectations {
   text-align: right;
-  padding-right: 1em;
+  padding-right: 0.5em;
 }
 .offer {
-  padding-left: 1em;
+  padding-left: 0.5em;
 }
+
+td {
+  vertical-align: baseline;
+  min-width: 540px;
+}
+tr {
+  padding: 0;
+  margin: 0;
+}
+.table-wrapper {
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+td > p {
+  font-size: 20px;
+  font-weight: 700;
+  margin: 0.4rem 0;
