--- a/_layouts/the-show.html
+++ b/_layouts/the-show.html
@@ -5,7 +5,7 @@ layout: default
   <div>
     <img class="show" src="/assets/images/image-show.png" alt="">
   </div>
-  
+
 <div class="table-wrap">
     <table>
       <tbody>
@@ -34,3 +34,4 @@ layout: default
   </div>
 </div>
 {% include navigation-show.html %}
+<!--  is my profile picture online? -->
