this is how philipp wanted the layou of the show

--- a/_includes/navigation-show.html
+++ b/_includes/navigation-show.html
@@ -1,7 +1,9 @@
-<span class="slogan">3 PERFORMERS, 100 DRUMMERS, AND...</span>
-<div class="show-navigation">
-  <a {% if page.url == "/the-show/gallery.html" %}class="active-button-show"{% endif %}href="/the-show/gallery">GALLERY</a>
-  <a {% if page.url == "/the-show/video.html" %}class="active-button-show"{% endif %}href="/the-show/video">VIDEO</a>
-  <a {% if page.url == "/the-show/story.html" %}class="active-button-show"{% endif %}href="/the-show/story">STORY</a>
-  <a {% if page.url == "/the-show.html" %}class="active-button-show"{% endif %}href="/the-show/">OFFER</a>
+<div class="show-footer">
+  <h1>3 PERFORMERS, 100 DRUMMERS, AND...</h1>
+  <div class="show-navigation">
+    <a class="button-show" {% if page.url == "/the-show/gallery.html" %}class="active-button-show"{% endif %}href="/the-show/gallery">GALLERY</a>
+    <a class="button-show" {% if page.url == "/the-show/video.html" %}class="active-button-show"{% endif %}href="/the-show/video">VIDEO</a>
+    <a class="button-show" {% if page.url == "/the-show/story.html" %}class="active-button-show"{% endif %}href="/the-show/story">STORY</a>
+    <a class="button-show" {% if page.url == "/the-show.html" %}class="active-button-show"{% endif %}href="/the-show/">OFFER</a>
+  </div>
 </div>
