--- a/_sass/show.scss
+++ b/_sass/show.scss
@@ -35,3 +35,22 @@ td > p {
   font-size: 20px;
   font-weight: 700;
   margin: 0.4rem 0;
+}
+img.show {
+  max-width: 500px
+}
+.show-footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.show-navigation {
+  display: grid;
+  width: 80%;
+  grid-template-columns: repeat(4, 1fr);
+  align-items: center;
+}
+.button-show {
+  padding: 0 5em;
+  text-align: center;
+}
