--- a/_includes/navigation-show.html
+++ b/_includes/navigation-show.html
@@ -1,9 +1,24 @@
-<div class="show-footer">
+<!-- <div class="show-footer">
   <h1>3 PERFORMERS, 100 DRUMMERS, AND...</h1>
   <div class="show-navigation">
-    <a class="button-show" {% if page.url == "/the-show/gallery.html" %}class="active-button-show"{% endif %}href="/the-show/gallery">GALLERY</a>
-    <a class="button-show" {% if page.url == "/the-show/video.html" %}class="active-button-show"{% endif %}href="/the-show/video">VIDEO</a>
-    <a class="button-show" {% if page.url == "/the-show/story.html" %}class="active-button-show"{% endif %}href="/the-show/story">STORY</a>
-    <a class="button-show" {% if page.url == "/the-show.html" %}class="active-button-show"{% endif %}href="/the-show/">OFFER</a>
+    <a class="button-show" {% if page.url == "/the-show/gallery.html" %}class="active button-show"{% endif %}href="/the-show/gallery">GALLERY</a>
+    <a class="button-show" {% if page.url == "/the-show/video.html" %}class="active button-show"{% endif %}href="/the-show/video">VIDEO</a>
+    <a class="button-show" {% if page.url == "/the-show/story.html" %}class="active button-show"{% endif %}href="/the-show/story">STORY</a>
+    <a class="button-show" {% if page.url == "/the-show" %}class="active-button-show"{% endif %}href="/the-show/">OFFER</a>
   </div>
+</div> -->
+<div class="show-footer">
+<div class="show-navigation">
+
+  {% for item in site.data.navigation-show %}
+    {% if page.url == item.link %}
+      <a class="active-button-show" href="{{ item.link }}">{{ item.name }}</a>
+
+      {% else %}
+
+      <a class="button-show" href="{{ item.link }}">{{ item.name }}</a>
+    {% endif %}
+  {% endfor %}
+
+</div>
 </div>
