--- a/_sass/show.scss
+++ b/_sass/show.scss
@@ -40,17 +40,28 @@ img.show {
   max-width: 500px
 }
 .show-footer {
+  margin-top: 1em;
+  border-top: solid 3px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .show-navigation {
+  margin-top: 1em;
   display: grid;
   width: 80%;
   grid-template-columns: repeat(4, 1fr);
   align-items: center;
+  justify-content: center;
 }
 .button-show {
-  padding: 0 5em;
+  margin: 0 5em;
+  padding: 1em 0;
+  background: $yellow;
+  color: $blue;
+  font-weight: 900;
   text-align: center;
+}
+.active-button-show {
+  background: $blue;
 }
