--- a/_sass/show.scss
+++ b/_sass/show.scss
@@ -63,5 +63,11 @@ img.show {
   text-align: center;
 }
 .active-button-show {
-  background: $blue;
+  background: $green;
+  color: $yellow;
+  text-decoration: underline;
+  font-weight: 900;
+  text-align: center;
+  margin: 0 5em;
+  padding: 1em 0;
 }
