--- a/_includes/navigation-show.html
+++ b/_includes/navigation-show.html
@@ -1,4 +1,5 @@
 <div class="show-footer">
+    <h1>3 PERFORMERS, 100 DRUMMERS, AND...</h1>
 <div class="show-navigation">
 
   {% for item in site.data.navigation-show %}
