--- a/_sass/show.scss
+++ b/_sass/show.scss
@@ -1,18 +1,19 @@
 .show-wrapper {
-  display: flex;
-  flex-direction: column;
-  object-fit: contain;
+  display: grid;
+  margin-top: 4rem;
+  grid-template-columns: 50% 50%;
   align-items: center;
-  justify-content: center;
+  justify-content: grid-column-start;
+  width: 100%;
 }
 
-.offer-wrapper {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
 .expectations {
   text-align: right;
   padding-right: 0.5em;
+  vertical-align: baseline;
+}
+.statement {
+  vertical-align: bottom;
 }
 .offer {
   padding-left: 0.5em;
@@ -20,26 +21,25 @@
 
 td {
   vertical-align: baseline;
-  min-width: 540px;
+  // min-width: 540px;
 }
 tr {
   padding: 0;
   margin: 0;
 }
-.table-wrapper {
-display: flex;
-flex-direction: column;
-align-items: center;
-}
 td > p {
   font-size: 20px;
-  font-weight: 700;
+  font-weight: 400;
   margin: 0.4rem 0;
 }
 img.show {
-  max-width: 500px
+  place-self: center;
 }
+//Footer-Show Navigation
 .show-footer {
+  position: absolute;
+  width: 100%;
+  bottom: 3em;
   margin-top: 1em;
   border-top: solid 3px;
   display: flex;
