--- a/_layouts/video.html
+++ b/_layouts/video.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 ---
+<div class="video-wrap">
+  <iframe class="video-show"width="960" height= "540" src="{{ page.video-link }}?rel=0;&autoplay=1" frameborder="0" allow="accelerometer; autoplay;" allowfullscreen></iframe>
+</div>
 
-<iframe width="960" height= "540" src="{{ page.video-link }}" frameborder="0" allow="accelerometer; autoplay;" allowfullscreen></iframe>
 {% include navigation-show.html%}
