--- a/_sass/show.scss
+++ b/_sass/show.scss
@@ -36,6 +36,9 @@ img.show {
   place-self: center;
 }
 //Footer-Show Navigation
+.show-footer-wrap {
+  display: block;
+}
 .show-footer {
   position: absolute;
   width: 100%;
