--- a/_layouts/story.html
+++ b/_layouts/story.html
@@ -1,14 +1,23 @@
 ---
 layout: default
 ---
-<div class="story">
-<div class="text">
-  <h1>{{ page.story-title }}</h1>
-  <p>{{ content }}</p>
-</div>
-<div class="images">
-  <img class="story-image-1" src="/assets/images/story-image-1.png" alt="">
-  <img class="story-image-2" src="/assets/images/story-image-2.png" alt="">
-</div>
+<div class="story-wrap">
+
+    <div class="story-text-wrap">
+      <div class="story-text">
+        <h1 class="center-title">{{ page.story-title }}</h1>
+        <p>{{ content }}</p>
+      </div>
+    </div>
+
+
+  <div class="story-images">
+    <img class="story-image-1" src="/assets/images/story-image-1.jpg" alt="">
+    <img class="story-image-2" src="/assets/images/story-image-2.jpg" alt="">
+    <i class="fas fa-arrow-down"></i>
+  </div>
+
+
+
 </div>
 {% include navigation-show.html %}
