--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -23,6 +23,9 @@ h1 {
   font-weight: 900;
   font-size: 26px;
 }
+h1.center-title {
+  text-align: center;
+}
 h2{
   font-size: 20px;
   font-weight: 900;
