--- a/_sass/story.scss
+++ b/_sass/story.scss
@@ -17,8 +17,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-left: 4rem;
-  margin-top: 4rem;
+  margin: 2rem 0 2rem 2rem;
 }
 .story-image-1, .story-image-2 {
   width: 17rem;
@@ -31,15 +30,14 @@
   transform: rotate(-14deg);
 }
 .story-text-wrap {
-  height: 35rem;
+  height: 25rem;
   display: block;
   overflow: scroll;
   padding: 0 2rem;
-  min-height:101%;
 }
 .fas.fa-arrow-down {
   font-size: 2rem;
   position: absolute;
   bottom: 0;
-  left: -5rem;
+  left: -4rem;
 }
