--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -1,30 +1,32 @@
 ---
 layout: default
 ---
+<div class="team">
+  <div class="berta person">
+    <img src="/assets/images/avatar-berta.png" alt="">
+    <h2>Berta Del Ben</h2>
+    <h4>Italy</h4>
+    <h3>Actress and Theatre-Maker</h3>
+    <p>{{ page.berta }}</p>
+  </div>
 
-<div class="berta person">
-  <img src="/assets/images/avatar-berta.png" alt="">
-  <h2>Berta Del Ben</h2>
-  <h4>Italy</h4>
-  <h3>Actress and Theatre-Maker</h3>
-  <p>{{ page.berta }}</p>
+  <div class="philipp person">
+    <img src="/assets/images/avatar-philipp.png" alt="">
+    <h2>Philipp Schäfer</h2>
+    <h4>Italy</h4>
+    <h3>Actress and Theatre-Maker</h3>
+    <p>{{ page.philipp }}</p>
+  </div>
+
+  <div class="florian person">
+    <img src="/assets/images/avatar-florian.png" alt="">
+    <h2>Florian Josef Blank</h2>
+    <h4>Italy</h4>
+    <h3>Actress and Theatre-Maker</h3>
+    <p>{{ page.florian }}</p>
+  </div>
+
   <img class="action-figure" src="../assets/images/berta-in-action.png" alt="">
-</div>
-
-<div class="philipp person">
-  <img src="/assets/images/avatar-philipp.png" alt="">
-  <h2>Philipp Schäfer</h2>
-  <h4>Italy</h4>
-  <h3>Actress and Theatre-Maker</h3>
-  <p>{{ page.philipp }}</p>
   <img class="action-figure" src="../assets/images/philipp-in-action.png" alt="">
-</div>
-
-<div class="florian person">
-  <img src="/assets/images/avatar-florian.png" alt="">
-  <h2>Florian Josef Blank</h2>
-  <h4>Italy</h4>
-  <h3>Actress and Theatre-Maker</h3>
-  <p>{{ page.florian }}</p>
   <img class="action-figure" src="../assets/images/florian-in-action.png" alt="">
 </div>
