--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -30,6 +30,12 @@ h2{
   font-size: 20px;
   font-weight: 900;
 }
+h3 {
+  font-weight: 900;
+}
+h4 {
+  font-size: 12px;
+}
 a{
   color: $yellow;
   text-decoration: none;
