--- a/_layouts/impressum.html
+++ b/_layouts/impressum.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 ---
-<div class="wrapper-impressum">
+<div class="impressum-wrap">
   <div class="impressum">
-    <p class="name">{{ page.contact-name }}</p>
+    <h2 class="name">{{ page.contact-name }}</h2>
     <p>{{ page.address }}</p>
     <p>{{ page.telephone }}</p>
     <p>{{ page.fax }}</p>
@@ -15,5 +15,6 @@ layout: default
     <div>
       {{ content }}
     </div>
+    <i class="privacy-arrow fas fa-arrow-down"></i>
   </div>
 </div>
