--- a/_layouts/story.html
+++ b/_layouts/story.html
@@ -14,7 +14,7 @@ layout: default
   <div class="story-images">
     <img class="story-image-1" src="/assets/images/story-image-1.jpg" alt="">
     <img class="story-image-2" src="/assets/images/story-image-2.jpg" alt="">
-    <i class="fas fa-arrow-down"></i>
+    <i class="story-arrow fas fa-arrow-down"></i>
   </div>
 
 
