--- a/_sass/story.scss
+++ b/_sass/story.scss
@@ -35,8 +35,7 @@
   overflow: scroll;
   padding: 0 2rem;
 }
-.fas.fa-arrow-down {
-  font-size: 2rem;
+.story-arrow.fas.fa-arrow-down {
   position: absolute;
   bottom: 0;
   left: -4rem;
