--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -2,37 +2,37 @@
 layout: default
 ---
 <div class="gallery">
-  <div class="big-pic slider slider-for">
-    <div class="slider-for" ><img src="/uploads/crazy-rumble-drum-circus-gallery-12.jpg"></div>
-    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-2.jpg"></div>
-    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-3.jpg"></div>
-    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-4.jpg"></div>
-    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-5.jpg"></div>
-    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-6.jpg"></div>
-    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-7.jpg"></div>
-    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-8.jpg"></div>
-    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-9.jpg"></div>
-    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-10.jpg"></div>
-    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-11.jpg"></div>
-    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-12.jpg"></div>
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src=".../800x400?auto=yes&bg=777&fg=555&text=First slide" alt="">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src=".../800x400?auto=yes&bg=666&fg=444&text=Second slide" alt="">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Third slide" alt="">
+    </div>
   </div>
-
-  <div class="pic-list slider slider-nav">
-    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-1.jpg"></div>
-    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-2.jpg"></div>
-    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-3.jpg"></div>
-    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-4.jpg"></div>
-    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-5.jpg"></div>
-    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-6.jpg"></div>
-    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-7.jpg"></div>
-    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-8.jpg"></div>
-    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-9.jpg"></div>
-    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-10.jpg"></div>
-    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-11.jpg"></div>
-    <div><img class="gallery-pic" src="/uploads/crazy-rumble-drum-circus-gallery-12.jpg"></div>
-  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 </div>
 
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 
 <!-- Script for gallery carousel -->
