--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -9,7 +9,9 @@
   left: 4rem;
   top: 2em;
 }
-
+.cta.contact:hover {
+  color: $yellow;
+}
 .cta.contact {
   position: absolute;
   right: 4rem;
@@ -38,4 +40,7 @@
 font-size: 23px;
 font-weight: 900;
 text-decoration: underline;
+}
+a.menu-item:hover {
+  color: $yellow;
 }
