--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -39,6 +39,10 @@ h4 {
 a{
   color: $yellow;
   text-decoration: none;
+  :hover, :focus {
+    color: $yellow !important;
+    text-decoration: none !important;
+  }
 }
 strong {
   font-weight: bold;
