--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 ---
+
+
 <div class="gallery">
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
@@ -9,15 +11,16 @@ layout: default
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
   </ol>
   <div class="carousel-inner">
+
     <div class="carousel-item active">
-      <img class="d-block w-100" src=".../800x400?auto=yes&bg=777&fg=555&text=First slide" alt="">
+      <img class="d-block w-100" src="{{ page.first_image }}/800x400?auto=yes&bg=777&fg=555" alt="">
     </div>
+    {% for images in page.images %}
     <div class="carousel-item">
-      <img class="d-block w-100" src=".../800x400?auto=yes&bg=666&fg=444&text=Second slide" alt="">
+      <img class="d-block w-100" src="{{ images.image }}/800x400?auto=yes&bg=666&fg=444&text=Second slide" alt="">
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Third slide" alt="">
-    </div>
+    {% endfor %}
+
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
