--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -5,19 +5,14 @@ layout: default
 
 <div class="gallery">
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
   <div class="carousel-inner">
 
     <div class="carousel-item active">
-      <img class="d-block w-100" src="{{ page.first_image }}/800x400?auto=yes&bg=777&fg=555" alt="">
+      <img class="gallery d-block w-100" src="{{ page.first_image }}/800x400?auto=yes&bg=777&fg=555" alt="">
     </div>
     {% for images in page.images %}
     <div class="carousel-item">
-      <img class="d-block w-100" src="{{ images.image }}/800x400?auto=yes&bg=666&fg=444&text=Second slide" alt="">
+      <img class="gallery d-block w-100" src="{{ images.image }}/800x400?auto=yes&bg=666&fg=444&text=Second slide" alt="">
     </div>
     {% endfor %}
 
