--- a/_sass/show.scss
+++ b/_sass/show.scss
@@ -39,7 +39,7 @@ td > p {
   position: absolute;
   width: 100%;
   bottom: 3em;
-  margin-top: 1em;
+  padding-top: 1em;
   border-top: solid 3px;
   display: flex;
   flex-direction: column;
